deploy/heartbeat/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heartbeat
  labels:
    app: heartbeat
