deploy/heartbeat/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heartbeat
  namespace: heartbeat
  labels:
    app: heartbeat
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /heartbeat
            pathType: Prefix
            backend:
              service:
                name: heartbeat
                port:
                  number: 8080
